# RAG

./: README.md  pyproject.toml
project/conf/: config.py
project/src/vector_db/: build_slr_vector_db.py  milvus_pipeline.py  pipeline.py
